--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3"
 services:
   mariadb:
-    image: mariadb:10.4.6
-    restart: "no"
+    image: mariadb:10.5.12
     environment:
       MYSQL_USER: taskbook
       MYSQL_PASSWORD: taskbook
       MYSQL_DATABASE: taskbook
       MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "127.0.0.1:3306:3306"
     command: --character-set-server=utf8 --collation-server=utf8_bin --max-allowed-packet=67108864
 
   taskbook:
-    image: malczuuu/taskbook:0.3.0
-    restart: "no"
+    image: malczuuu/taskbook:latest
     environment:
       MARIADB_URI: jdbc:mariadb://mariadb:3306/taskbook
       MARIADB_USERNAME: taskbook
@@ -20,4 +20,4 @@ services:
       JWT_SECRET: qwertyuiopasdfghjklzxcvbnm
       JWT_LIFETIME: 864000
     ports:
-      - 127.0.0.1:26160:26160
+      - "127.0.0.1:26160:26160"
