--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@angular/platform-browser-dynamic": "^20.0.3",
     "@angular/router": "^20.0.3",
     "@auth0/angular-jwt": "^5.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.0-rc.0",
     "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
     "ngx-toastr": "^19.0.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
@@ -35,21 +35,22 @@
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.3",
     "@angular/language-service": "^20.0.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
+    "@types/jasmine": "~5.1.0",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/node": "^24.0.1",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~5.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "prettier": "^2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.5.3",
     "protractor": "~7.0.0",
     "puppeteer": "^24.10.1",
-    "ts-node": "~8.3.0",
+    "ts-node": "~10.9.2",
     "tslint": "~6.1.0",
     "typescript": "~5.8.3"
   }
