--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
             },
             "index": "src/index.html",
             "polyfills": [
-              "zone.js"
+              "src/polyfills.ts"
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
@@ -91,8 +91,7 @@
           "builder": "@angular/build:karma",
           "options": {
             "polyfills":[
-              "zone.js",
-              "zone.js/testing"
+              "src/polyfills.ts"
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
