--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,14 +4,10 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
-    "src/**/*.ts"
+    "src/**/*.spec.ts"
   ]
 }
