--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,9 +9,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "typeRoots": ["node_modules/@types"],
     "target": "es2015",
     "module": "esnext"
   },
