--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   mariadb:
     image: mariadb:10.5.12
@@ -8,7 +8,7 @@ services:
       MYSQL_DATABASE: taskbook
       MYSQL_ROOT_PASSWORD: root
     ports:
-      - "127.0.0.1:3306:3306"
+      - '127.0.0.1:3306:3306'
     command: --character-set-server=utf8 --collation-server=utf8_bin --max-allowed-packet=67108864
 
   taskbook:
@@ -20,4 +20,4 @@ services:
       JWT_SECRET: qwertyuiopasdfghjklzxcvbnm
       JWT_LIFETIME: 864000
     ports:
-      - "127.0.0.1:26160:26160"
+      - '127.0.0.1:26160:26160'
