--- a/.github/workflows/node.js-weekly.yml
+++ b/.github/workflows/node.js-weekly.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [20.x, 22.x, 24.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -26,5 +26,3 @@ jobs:
       - run: npm ci
 
       - run: npm run build --if-present
-
-      - run: npm test
