--- a/.github/workflows/node.js-weekly.yml
+++ b/.github/workflows/node.js-weekly.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: master
+          ref: main
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
